--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,12 +7,12 @@ enable-criticals: true
 old-criticals: false
 
 # How many clicks per second are we allowing?
-max-cps: 12
+max-cps: 15
 
 # How many blocks of reach can players have?
-max-reach: 3.85
+max-reach: 4.95
 
 # Bridge to other PvP proteciton plugins
 # WorldGuard bridge is currently not stable.
 use-bridge:
-  worldguard: false
+  worldguard: true
